parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIVIDE
    LPAREN
    MINUS
    RPAREN

Grammar

Rule 0     S' -> program
Rule 1     program -> program statement
Rule 2     program -> statement
Rule 3     statement -> INT ID SEMI
Rule 4     statement -> INT ID ASSIGN expression SEMI
Rule 5     statement -> ID ASSIGN expression SEMI
Rule 6     expression -> expression PLUS term
Rule 7     expression -> term
Rule 8     term -> term TIMES factor
Rule 9     term -> factor
Rule 10    factor -> NUMBER
Rule 11    factor -> ID

Terminals, with rules where they appear

ASSIGN               : 4 5
DIVIDE               : 
ID                   : 3 4 5 11
INT                  : 3 4
LPAREN               : 
MINUS                : 
NUMBER               : 10
PLUS                 : 6
RPAREN               : 
SEMI                 : 3 4 5
TIMES                : 8
error                : 

Nonterminals, with rules where they appear

expression           : 4 5 6
factor               : 8 9
program              : 1 0
statement            : 1 2
term                 : 6 7 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program statement
    (2) program -> . statement
    (3) statement -> . INT ID SEMI
    (4) statement -> . INT ID ASSIGN expression SEMI
    (5) statement -> . ID ASSIGN expression SEMI

    INT             shift and go to state 3
    ID              shift and go to state 4

    program                        shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> program .
    (1) program -> program . statement
    (3) statement -> . INT ID SEMI
    (4) statement -> . INT ID ASSIGN expression SEMI
    (5) statement -> . ID ASSIGN expression SEMI

    INT             shift and go to state 3
    ID              shift and go to state 4

    statement                      shift and go to state 5

state 2

    (2) program -> statement .

    INT             reduce using rule 2 (program -> statement .)
    ID              reduce using rule 2 (program -> statement .)
    $end            reduce using rule 2 (program -> statement .)


state 3

    (3) statement -> INT . ID SEMI
    (4) statement -> INT . ID ASSIGN expression SEMI

    ID              shift and go to state 6


state 4

    (5) statement -> ID . ASSIGN expression SEMI

    ASSIGN          shift and go to state 7


state 5

    (1) program -> program statement .

    INT             reduce using rule 1 (program -> program statement .)
    ID              reduce using rule 1 (program -> program statement .)
    $end            reduce using rule 1 (program -> program statement .)


state 6

    (3) statement -> INT ID . SEMI
    (4) statement -> INT ID . ASSIGN expression SEMI

    SEMI            shift and go to state 8
    ASSIGN          shift and go to state 9


state 7

    (5) statement -> ID ASSIGN . expression SEMI
    (6) expression -> . expression PLUS term
    (7) expression -> . term
    (8) term -> . term TIMES factor
    (9) term -> . factor
    (10) factor -> . NUMBER
    (11) factor -> . ID

    NUMBER          shift and go to state 14
    ID              shift and go to state 10

    expression                     shift and go to state 11
    term                           shift and go to state 12
    factor                         shift and go to state 13

state 8

    (3) statement -> INT ID SEMI .

    INT             reduce using rule 3 (statement -> INT ID SEMI .)
    ID              reduce using rule 3 (statement -> INT ID SEMI .)
    $end            reduce using rule 3 (statement -> INT ID SEMI .)


state 9

    (4) statement -> INT ID ASSIGN . expression SEMI
    (6) expression -> . expression PLUS term
    (7) expression -> . term
    (8) term -> . term TIMES factor
    (9) term -> . factor
    (10) factor -> . NUMBER
    (11) factor -> . ID

    NUMBER          shift and go to state 14
    ID              shift and go to state 10

    expression                     shift and go to state 15
    term                           shift and go to state 12
    factor                         shift and go to state 13

state 10

    (11) factor -> ID .

    TIMES           reduce using rule 11 (factor -> ID .)
    SEMI            reduce using rule 11 (factor -> ID .)
    PLUS            reduce using rule 11 (factor -> ID .)


state 11

    (5) statement -> ID ASSIGN expression . SEMI
    (6) expression -> expression . PLUS term

    SEMI            shift and go to state 16
    PLUS            shift and go to state 17


state 12

    (7) expression -> term .
    (8) term -> term . TIMES factor

    SEMI            reduce using rule 7 (expression -> term .)
    PLUS            reduce using rule 7 (expression -> term .)
    TIMES           shift and go to state 18


state 13

    (9) term -> factor .

    TIMES           reduce using rule 9 (term -> factor .)
    SEMI            reduce using rule 9 (term -> factor .)
    PLUS            reduce using rule 9 (term -> factor .)


state 14

    (10) factor -> NUMBER .

    TIMES           reduce using rule 10 (factor -> NUMBER .)
    SEMI            reduce using rule 10 (factor -> NUMBER .)
    PLUS            reduce using rule 10 (factor -> NUMBER .)


state 15

    (4) statement -> INT ID ASSIGN expression . SEMI
    (6) expression -> expression . PLUS term

    SEMI            shift and go to state 19
    PLUS            shift and go to state 17


state 16

    (5) statement -> ID ASSIGN expression SEMI .

    INT             reduce using rule 5 (statement -> ID ASSIGN expression SEMI .)
    ID              reduce using rule 5 (statement -> ID ASSIGN expression SEMI .)
    $end            reduce using rule 5 (statement -> ID ASSIGN expression SEMI .)


state 17

    (6) expression -> expression PLUS . term
    (8) term -> . term TIMES factor
    (9) term -> . factor
    (10) factor -> . NUMBER
    (11) factor -> . ID

    NUMBER          shift and go to state 14
    ID              shift and go to state 10

    term                           shift and go to state 20
    factor                         shift and go to state 13

state 18

    (8) term -> term TIMES . factor
    (10) factor -> . NUMBER
    (11) factor -> . ID

    NUMBER          shift and go to state 14
    ID              shift and go to state 10

    factor                         shift and go to state 21

state 19

    (4) statement -> INT ID ASSIGN expression SEMI .

    INT             reduce using rule 4 (statement -> INT ID ASSIGN expression SEMI .)
    ID              reduce using rule 4 (statement -> INT ID ASSIGN expression SEMI .)
    $end            reduce using rule 4 (statement -> INT ID ASSIGN expression SEMI .)


state 20

    (6) expression -> expression PLUS term .
    (8) term -> term . TIMES factor

    SEMI            reduce using rule 6 (expression -> expression PLUS term .)
    PLUS            reduce using rule 6 (expression -> expression PLUS term .)
    TIMES           shift and go to state 18


state 21

    (8) term -> term TIMES factor .

    TIMES           reduce using rule 8 (term -> term TIMES factor .)
    SEMI            reduce using rule 8 (term -> term TIMES factor .)
    PLUS            reduce using rule 8 (term -> term TIMES factor .)

